--- a/config/pd-nightly-tiflash.toml
+++ b/config/pd-nightly-tiflash.toml
@@ -1,3 +1,23 @@
 [replication]
 enable-placement-rules = true
-max-replicas = 1
+max-replicas = 3
+
+
+[metric]
+# prometheus client push interval, set "0s" to disable prometheus.
+interval = "15s"
+# prometheus pushgateway address, leaves it empty will disable prometheus.
+address = "pushgateway:9091"
+
+
+[pd-server]
+
+metric-storage = "http://prometheus:9090/"
+dashboard-address = "http://0.0.0.0:2379"
+
+
+
+
+[dashboard]
+dashboard-address = "auto"
+
